--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -1,14 +1,24 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
+    font-family: var(--fonte1);
     min-height: 100%vh;
     background-color: darkgray;
 }
+
 header {
     background-color: black;
     color: white;
@@ -17,6 +27,8 @@ header {
 
 header > h1 {
     padding-top: 50px;
+    font-family: var(--fonte2);
+    font-size: 10vw;
     font-variant: small-caps;
 }
 
@@ -35,6 +47,8 @@ header a:hover, footer a:hover {
 }
 
 section {
+    font-size: 3.5vw;
+    font-family: var(--fonte3);
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
@@ -52,7 +66,8 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.253);
 }
 
