--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -33,6 +33,7 @@ header > h1 {
 }
 
 header > p {
+
     padding-bottom: 50px;
 }
 
@@ -47,12 +48,16 @@ header a:hover, footer a:hover {
 }
 
 section {
-    font-size: 3.5vw;
+    font-size: 3vw;
     font-family: var(--fonte3);
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+}
+
+section > p {
+    padding-bottom: 2em
 }
 
 section.normal {
@@ -61,7 +66,10 @@ section.normal {
 }
 
 section.imagem {
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
     background-color: rgba(51, 51, 51);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
     color: white;
 }
 
@@ -69,6 +77,17 @@ section.imagem > p {
     display: inline-block;
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.253);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01 {
+background-image: url('../imagens/background001.jpg');
+background-position: right center;
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+
 }
 
 footer {
