ex002 media query

--- a/Exercícios/ex026-media-queries/mq002/estilos/retrato.css
+++ b/Exercícios/ex026-media-queries/mq002/estilos/retrato.css
@@ -1,3 +1,8 @@
 @charset "UTF-9";
 
-/* ESTILOS PARA RETRATO */
+/* ESTILOS PARA PORTRAIT */
+
+body {
+    background-image: url(../imagens/cev-portrait.jpg);
+    background-position: center bottom;
+}
